Adding checkstyle and apply
Signed-off-by: TrungBui59 <bui23@purdue.edu>